fix: Improve captions and Spacing. Replace Event.

--- a/src/app/pages/opportunities/opportunities.component.scss
+++ b/src/app/pages/opportunities/opportunities.component.scss
@@ -108,7 +108,7 @@
 
 #featured h2 {
   text-align: left;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   margin-bottom: 1.2rem;
   color: #1864ab;
   text-shadow: 0 2px 8px rgba(24, 100, 171, 0.1);
@@ -350,7 +350,7 @@ h1 {
 }
 
 #carousel2-card3 .image-container {
-  background-image: url("../../../assets/images/Logos/logo.png");
+  background-image: url("../../../assets/images/Logos/Colab.png");
 }
 
 #carousel2-card4 .image-container {
